feat: Save the date asset added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hello world!
+<!doctype html>
+<html>
+  <head>
+    <title>Ellie &amp; James</title>
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <div class="grid h-full">
+        <img class="max-h-screen w-full m-auto" src="/assets/save the date.png" />
+    </div>
+  </body>
+</html>
