fix: Relative url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="grid h-full">
-        <img class="max-h-screen w-full m-auto" src="/elliejameswedding/assets/save the date.png" />
+        <img class="max-h-screen w-full m-auto" src="assets/save the date.png" />
     </div>
   </body>
 </html>
