fix: scaling object fit contain

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="grid h-full">
-        <img class="max-h-screen w-full m-auto" src="assets/save the date.png" />
+    <div class="grid h-screen">
+        <img class="max-h-screen w-full m-auto object-contain" src="assets/save the date.png" />
     </div>
   </body>
 </html>
