--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!doctype html>
-<html>
-  <head>
-    <title>Ellie &amp; James</title>
+<html lang="en">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body>
-    <div class="grid h-screen">
-        <img class="max-h-screen w-full m-auto object-contain" src="assets/save the date.png" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <title>Ellie &amp; James</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&display=swap" rel="stylesheet">
+
+
+  <style>
+    body {
+      font-family: "Baskervville", serif;
+    }
+  </style>
+</head>
+
+<body class="lg:overflow-hidden">
+  <div class="grid grid-cols-5 grid-rows-1">
+    <div class="lg:col-span-3 col-span-5 h-screen relative">
+      <img class="w-full h-full object-cover" src="assets/jamesellie.jpg" />
+      <div class="absolute left-20 bottom-20">
+        <h1 class="text-5xl text-white">Ellie &amp; James</h1>
+        <p class="text-white">We can't wait to share our special day with you. </p>
+      </div>
     </div>
-  </body>
+    <div class="lg:col-span-2 lg:col-start-4 col-span-5 p-5 lg:overflow-scroll h-screen">
+      <div class="h-[calc(100vh-40px)] flex">
+        <img class="max-h-[calc(100vh-40px)] w-full m-auto object-contain" src="assets/save the date.png" />
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
