feat: Save the date phase final touches

--- a/index.html
+++ b/index.html
@@ -27,13 +27,32 @@
       <img class="w-full h-full object-cover" src="assets/jamesellie.jpg" />
       <div class="absolute left-20 bottom-20">
         <h1 class="text-5xl text-white">Ellie &amp; James</h1>
-        <p class="text-white">We can't wait to share our special day with you. </p>
+        <p class="text-white">Join us for our wedding!</p>
       </div>
     </div>
     <div class="lg:col-span-2 lg:col-start-4 col-span-5 p-5 lg:overflow-scroll h-screen">
-      <div class="h-[calc(100vh-40px)] flex">
-        <img class="max-h-[calc(100vh-40px)] w-full m-auto object-contain" src="assets/save the date.png" />
+      <div class="h-[calc(100vh-100px)] flex">
+        <img class="max-h-[calc(100vh-100px)] w-full m-auto object-contain" src="assets/save the date.png" />
       </div>
+      <p style="margin:0px 0px 10px 0px;text-align:center;font-size:0px;"><a
+          href="https://www.addevent.com/event/Un21717886+apple" title="Apple" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-apple-t1.png" alt="Apple"
+            width="45" border="0" style="width:45px;display:inline;" /></a><a
+          href="https://www.addevent.com/event/Un21717886+google" title="Google" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-google-t1.png"
+            alt="Google" width="45" border="0" style="width:45px;display:inline;" /></a><a
+          href="https://www.addevent.com/event/Un21717886+office365" title="Office 365" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-office365-t1.png"
+            alt="Office 365" width="45" border="0" style="width:45px;display:inline;" /></a><a
+          href="https://www.addevent.com/event/Un21717886+outlook" title="Outlook" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-outlook-t1.png"
+            alt="Outlook" width="45" border="0" style="width:45px;display:inline;" /></a><a
+          href="https://www.addevent.com/event/Un21717886+outlookcom" title="Outlook.com" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-outlookcom-t1.png"
+            alt="Outlook.com" width="45" border="0" style="width:45px;display:inline;" /></a><a
+          href="https://www.addevent.com/event/Un21717886+yahoo" title="Yahoo" target="_blank"
+          style="display:inline;"><img src="https://cdn.addevent.com/libs/imgs/icon-emd-share-yahoo-t1.png" alt="Yahoo"
+            width="45" border="0" style="width:45px;display:inline;" /></a></p>
     </div>
   </div>
 </body>
